--- a/app/src/main/res/layout/fragment_league_standing.xml
+++ b/app/src/main/res/layout/fragment_league_standing.xml
@@ -24,6 +24,11 @@
             tools:text="PremierLeague" />
     </LinearLayout>
 
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
