Complete seperation of LeagueStandingFragment (by ClubsStanding, PlayerStanding) with tab

--- a/app/src/main/res/layout/fragment_league_standing.xml
+++ b/app/src/main/res/layout/fragment_league_standing.xml
@@ -25,101 +25,107 @@
     </LinearLayout>
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
-    <LinearLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical">
+        />
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/white"-->
+<!--        android:orientation="vertical">-->
 
 
-        <LinearLayout
-            android:id="@+id/explain_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/explain_item"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@color/black"-->
+<!--            android:orientation="horizontal">-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="순위"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="순위"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4.5"
-                android:text="팀"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="4.5"-->
+<!--                android:text="팀"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="경기"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="경기"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="승"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:text="승"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="무"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:text="무"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:gravity="right"
-                android:text="패"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.5"-->
+<!--                android:gravity="right"-->
+<!--                android:text="패"-->
+<!--                android:textAlignment="gravity"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:gravity="right"
-                android:text="GD"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.7"-->
+<!--                android:gravity="right"-->
+<!--                android:text="GD"-->
+<!--                android:textAlignment="gravity"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-                android:gravity="right"
-                android:text="승점"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="0.7"-->
+<!--                android:gravity="right"-->
+<!--                android:text="승점"-->
+<!--                android:textAlignment="gravity"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold" />-->
+<!--        </LinearLayout>-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/league_standing_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp" />
-    </LinearLayout>
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/league_standing_recyclerview"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginRight="1dp" />-->
+<!--    </LinearLayout>-->
 
 </LinearLayout>
