--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray_300">#E0E0E0</color>
     <color name="gray_400">#BDBDBD</color>
     <color name="gray_500">#9E9E9E</color>
+    <color name="gray_800">#424242</color>
     <color name="indigo_500">#3F51B5</color>
     <color name="indigo_600">#3949AB</color>
     <color name="green_300">#81C784</color>
